src/test/deca/syntax/valid/Objet/protected_field.deca
// Description:
//    test de la déclaration d'un chemin protected
//
// Resultats:
//   
//
// Historique:
//    cree le 19/01/2022

class A {
    protected int i ;
}



{

}

